Added ClickToShow Feature

--- a/main.css
+++ b/main.css
@@ -2,10 +2,10 @@
         position: relative;
 }
 
-.smart-tooltip-container:hover .smart-tooltip {
+/* .smart-tooltip-container:hover .smart-tooltip {
         visibility: visible;
         opacity: 1;
-}
+} */
 
 
 
